--- a/web_service/templates/includes/messages.j2
+++ b/web_service/templates/includes/messages.j2
@@ -1,9 +1,7 @@
-<div>
-  {% if messages %}
-    <ul class="messages">
-      {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-      {% endfor %}
-    </ul>
-  {% endif %}
-</div>
+{% if messages %}
+  <div class="messages" style="margin-bottom: 50px">
+    {% for message in messages %}
+      <div style="font-weight: bold" {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
+    {% endfor %}
+  </div>
+{% endif %}
