--- a/web_service/templates/services/FNS/fns_service.j2
+++ b/web_service/templates/services/FNS/fns_service.j2
@@ -3,4 +3,5 @@
 {% block content %}
   {% include "includes/messages.j2" %}
   {% include "includes/services/file_verification.j2" %}
+  {% include "includes/services/start_service.j2" %}
 {% endblock %}
