--- a/web_service/static/css/style.css
+++ b/web_service/static/css/style.css
@@ -1174,6 +1174,92 @@ footer {
   margin-bottom: 30px;
 }
 
+.form-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.form-wrappers {
+  position: relative;
+  content: "";
+}
+
+.form-input__debtor {
+  display: inline-flex;
+  width: 40rem;
+  height: 3rem;
+  border-radius: 22px;
+  margin-bottom: 0;
+  padding-left: 50px;
+  font-size: 1.1rem;
+}
+
+.form-input__debtor:hover {
+  background-color: #FFFFFF;
+}
+
+.form-input__debtor:active {
+  background-color: rgba(60, 63, 65);
+}
+
+.form__search__icon {
+  left: 15px;
+  position: absolute;
+  top: 15px;
+}
+/*
+.form__search__icon path {
+  transition: stroke 0.3s ease-in-out;
+}
+
+.form__search__icon:focus {
+  stroke: var(--orange);
+}
+
+.form__search__icon:hover {
+  stroke: var(--orange);
+}
+
+.form__search__icon:hover path {
+  stroke: var(--orange);
+}
+
+.form__search__icon:active {
+  stroke: var(--orange);
+}
+*/
+.table-debtor {
+  width: 100%;
+  border-spacing: 5px;
+  border: 3px solid var(--grey);
+
+  margin-bottom: 25px;
+}
+
+.table-debtor__title {
+  background: #e08156;
+  color: #333;
+  border: 1px solid var(--grey);
+  border-radius: 8px;
+  margin-bottom: 10px;
+  font-size: 1.3rem;
+  font-weight: 700;
+  text-align: center;
+}
+
+.table-debtor__row {
+  padding: 20px;
+}
+
+.table-debtor__column {
+  width: calc(100% / 2);
+  font-size: 1.1rem;
+  font-weight: 700;
+  background: var(--light-light-grey);
+  color: #000;
+}
+
 @media screen and (max-width: 1200px) {
   .container {
     padding: 50px;
